--- a/tema-3/index.html
+++ b/tema-3/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
+    <div id="product-container"></div>
     <script src="scripts.js"></script>
 </body>
 </html>
