--- a/tema-3/produktside1.html
+++ b/tema-3/produktside1.html
@@ -140,6 +140,9 @@
         Juridisk politik
             <br>
         Om Lys & Ler</p>
+        <a href="https://facebook.com"><img src="images/Facebook-24.png" alt=""></a>
+        <a href="https://instagram.com"><img src="images/Instagram-30.png" alt=""></a>
+
     </div>
 </div>
 
