--- a/tema-3/produktside2.html
+++ b/tema-3/produktside2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Laurbærfigen</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="produktside1.css">
+    <link rel="stylesheet" href="produktside2.css">
     <link rel="icon" type="image/x-icon" href="images/Logo.png"/>
 </head>
 <body>
@@ -140,6 +140,9 @@
             Juridisk politik
             <br>
             Om Lys & Ler</p>
+        <a href="https://facebook.com"><img src="images/Facebook-24.png" alt=""></a>
+        <a href="https://instagram.com"><img src="images/Instagram-30.png" alt=""></a>
+
     </div>
 </div>
 
