<!DOCTYPE html> <html lang="da"> <head>     <meta charset="UTF-8">     <meta name="viewport" content="width=device-width, initial-scale=1.0">     <title>Test</title>     <link rel="stylesheet" href="style.css">     <style>         .card {             width: 200px;             border: 1px solid #ddd;             border-radius: 8px;             padding: 10px;             text-align: center;             margin: 10px;             display: inline-block;             background-color: #f9f9f9;             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);         }
        .card img {
            width: 100%;
            border-radius: 8px;
        }

        #product-container {
            display: flex;
            flex-wrap: wrap;
            gap: 10px;
            justify-content: center;
            padding: 20px;
        }
    </style>
</head>
<body>
    <div id="product-container"></div>
    <script>
        const products = [
            { name: "Produkt 1", price: "199 kr", image: "https://via.placeholder.com/150" },
            { name: "Produkt 2", price: "249 kr", image: "https://via.placeholder.com/150" },
            { name: "Produkt 3", price: "299 kr", image: "https://via.placeholder.com/150" },
            { name: "Produkt 4", price: "349 kr", image: "https://via.placeholder.com/150" },
            { name: "Produkt 5", price: "399 kr", image: "https://via.placeholder.com/150" }
        ];

        const container = document.getElementById("product-container");

        function displayProducts() {
            container.innerHTML = "";
            products.forEach(product => {
                const card = document.createElement("div");
                card.classList.add("card");

                card.innerHTML = `
                    <img src="${product.image}" alt="${product.name}">
                    <h2>${product.name}</h2>
                    <p>${product.price}</p>
                `;

                container.appendChild(card);
            });
        }

 

--- a/tema-3/index.html
+++ b/tema-3/index.html
@@ -121,6 +121,9 @@
 </div>
 
 
+<!-- Overskrift -->
+
+
 <div class="h1-container">
     <h1>Nyheder</h1>
 </div>
@@ -143,9 +146,17 @@
 </footer>
 
 
+<!-- Baggrund -->
+
+
 <div class="baggrund2">
     <img src="images/bg1.png" alt="">
 </div>
+
+
+
+<!-- Footer-info -->
+
 
 
 <div class="footer-info">
