--- a/tema-3/produktside2.html
+++ b/tema-3/produktside2.html
@@ -34,20 +34,34 @@
 </div>
 
 
+<!-- AR ikon -->
+
 
 <div class="AR-ikon">
     <a href="" onclick="showMessage()"><img src="images/AR%20Ikon.png" alt=""></a>
 </div>
 
-<div class="produkt-wrapper">
 
+<!-- Produktbillede -->
+
+
+<div class="produkt-wrapper">
     <img src="images/produkt-plante.png" alt="">
 </div>
+
+
+<!-- Produktinfo -->
+
 
 <div class="produkt-info">
     <h2>Laurbærfigen</h2>
     <h2>499 kr.</h2>
 </div>
+
+
+<!-- Produktinfo -->
+
+
 
 <div class="produkt-ikoner">
     <div class="quantity-selector">
@@ -60,6 +74,11 @@
         <a href="">  <img src="images/Hjerte.png" alt="Favorit"></a>
     </div>
 </div>
+
+
+<!-- Produktbeskrivelse -->
+
+
 
 <div class="produkt-beskrivelse">
     <h2>Beskrivelse</h2>
@@ -80,9 +99,15 @@
 </footer>
 
 
+<!-- Baggrund -->
+
+
 <div class="baggrund2">
     <img src="images/bg1.png" alt="">
 </div>
+
+
+<!-- Footerinfo -->
 
 
 <div class="footer-info">
