--- a/tema-3/produktside3.html
+++ b/tema-3/produktside3.html
@@ -34,20 +34,35 @@
 </div>
 
 
+<!-- AR-ikon -->
+
+
 
 <div class="AR-ikon">
     <a href="AR.html"><img src="images/AR%20Ikon.png" alt=""></a>
 </div>
 
-<div class="produkt-wrapper">
 
+<!-- Produktbillede -->
+
+
+<div class="produkt-wrapper">
     <img src="images/reol.jpg.avif" alt="Reol">
 </div>
+
+
+<!-- Produktinfo -->
+
 
 <div class="produkt-info">
     <h2>Reol</h2>
     <h2>1600 kr.</h2>
 </div>
+
+
+<!-- Ikoner -->
+
+
 
 <div class="produkt-ikoner">
     <div class="quantity-selector">
@@ -60,6 +75,11 @@
         <a href="">  <img src="images/Hjerte.png" alt="Favorit"></a>
     </div>
 </div>
+
+
+<!-- Produktbeskrivelse -->
+
+
 
 <div class="produkt-beskrivelse">
     <h2>Beskrivelse</h2>
@@ -79,10 +99,14 @@
     </div>
 </footer>
 
+<!-- Baggrund -->
 
 <div class="baggrund2">
     <img src="images/bg1.png" alt="">
 </div>
+
+
+<!-- Footerinfo -->
 
 
 <div class="footer-info">
