--- a/tema-3/produktside4.html
+++ b/tema-3/produktside4.html
@@ -34,20 +34,33 @@
 </div>
 
 
+<!-- AR-ikon -->
+
+
 
 <div class="AR-ikon">
     <a href="" onclick="showMessage()"><img src="images/AR%20Ikon.png" alt=""></a>
 </div>
 
-<div class="produkt-wrapper">
 
+<!-- Produktbillede -->
+
+
+<div class="produkt-wrapper">
     <img src="images/Skærebræt.png" alt="Skærebræt">
 </div>
+
+
+<!-- Produktinfo -->
+
 
 <div class="produkt-info">
     <h2>Skærebræt</h2>
     <h2>120 kr.</h2>
 </div>
+
+<!-- Ikoner -->
+
 
 <div class="produkt-ikoner">
     <div class="quantity-selector">
@@ -60,6 +73,10 @@
         <a href="">  <img src="images/Hjerte.png" alt="Favorit"></a>
     </div>
 </div>
+
+
+<!-- Beskrivelse -->
+
 
 <div class="produkt-beskrivelse">
     <h2>Beskrivelse</h2>
@@ -79,10 +96,16 @@
     </div>
 </footer>
 
+<!-- Baggrund -->
+
 
 <div class="baggrund2">
     <img src="images/bg1.png" alt="">
 </div>
+
+
+<!-- Footerinfo -->
+
 
 
 <div class="footer-info">
